--- a/Agar.io.csproj
+++ b/Agar.io.csproj
@@ -55,13 +55,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Food.cs" />
+    <Compile Include="Objects\Food.cs" />
+    <Compile Include="Static\FoodFactory.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Player.cs" />
-    <Compile Include="PlayerFactory.cs" />
+    <Compile Include="Objects\Player.cs" />
+    <Compile Include="Static\PlayerFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VectorExtensions.cs" />
+    <Compile Include="Static\VectorExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
