--- a/Agar.io.csproj
+++ b/Agar.io.csproj
@@ -56,10 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Objects\Food.cs" />
-    <Compile Include="Static\FoodFactory.cs" />
+    <Compile Include="Static\Factory.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Objects\Player.cs" />
-    <Compile Include="Static\PlayerFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Static\VectorExtensions.cs" />
