--- a/Agar.io.csproj
+++ b/Agar.io.csproj
@@ -57,15 +57,17 @@
   <ItemGroup>
     <Compile Include="Objects\Food.cs" />
     <Compile Include="Static\Factory.cs" />
-    <Compile Include="Game.cs" />
+    <Compile Include="Game\Game.cs" />
     <Compile Include="Objects\Player.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Game\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Static\RandomFloat.cs" />
     <Compile Include="Static\VectorExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
