--- a/Agar.io.csproj
+++ b/Agar.io.csproj
@@ -60,12 +60,15 @@
     <Compile Include="Agar.io\Factory\ControllerFactory.cs" />
     <Compile Include="Agar.io\Factory\FoodFactory.cs" />
     <Compile Include="Agar.io\Factory\PlayerFactory.cs" />
+    <Compile Include="Agar.io\Interfaces\IDrawable.cs" />
+    <Compile Include="Agar.io\Interfaces\IUpdatable.cs" />
     <Compile Include="Agar.io\Objects\Food.cs" />
     <Compile Include="Agar.io\Game.cs" />
     <Compile Include="Agar.io\Objects\GameObject.cs" />
     <Compile Include="Agar.io\Objects\Player.cs" />
     <Compile Include="Agar.io\Controllers\Controller.cs" />
     <Compile Include="Agar.io\Program.cs" />
+    <Compile Include="Agar.io\Utils\EatHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Agar.io\Utils\Generator.cs" />
     <Compile Include="Agar.io\Utils\AgarioRandom.cs" />
