--- a/Agar.io.csproj
+++ b/Agar.io.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Agar.io\Controllers\Controller.cs" />
     <Compile Include="Agar.io\Program.cs" />
     <Compile Include="Agar.io\Utils\EatHelper.cs" />
+    <Compile Include="Agar.io\IniFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Agar.io\Utils\Generator.cs" />
     <Compile Include="Agar.io\Utils\AgarioRandom.cs" />
